src/objects/Project_User_Assignment__c.object
<CustomObject>
    <description>this hold the user workin on the project</description>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Project_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project User Assignments</relationshipLabel>
        <relationshipName>Project_User_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_User_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project User Assignment</label>
    <nameField>
        <displayFormat>UA-{00000}</displayFormat>
        <label>Project User Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project User Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>